clusters/building-blocks/other/apps/obsidian-sync/app/couchdb-sts.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/statefulset-apps-v1.json
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: couchdb
  namespace: default
  labels:
    app.kubernetes.io/name: couchdb
spec:
  replicas: 1
  serviceName: couchdb
  selector:
    matchLabels:
      app.kubernetes.io/name: couchdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.5.2
          ports:
            - containerPort: 5984
          volumeMounts:
            - name: couchdb-data
              mountPath: /opt/couchdb/data
            - name: couchdb-config
              mountPath: /opt/couchdb/etc/local.d
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 100Mi
      volumes:
        - name: couchdb-data
          persistentVolumeClaim:
            claimName: couchdb-data-pvc
        - name: couchdb-config
          persistentVolumeClaim:
            claimName: couchdb-config-pvc
