clusters/building-blocks/other/apps/obsidian-sync/app/couchdb-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: default
  labels:
    app.kubernetes.io/name: couchdb
spec:
  selector:
    app.kubernetes.io/name: couchdb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5984
